[tool.poetry]
name = "database-sky"
version = "0.1.0"
description = ""
authors = ["Михаил"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

